# ace-tool-rs

./: Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README-zh-CN.md  README.md  findings.md  progress.md  task_plan.md
.github/workflows/: ci.yml  release.yml
docs/: 2026-03-11-search-context-dynamic-document-exclusion-design.md  claude-code-mcp-setup.md  deployment-guide.md  search-context-sop.md
docs/superpowers/plans/: 2026-03-11-search-context-dynamic-document-exclusion.md  2026-03-11-search-context-filter-fix.md  2026-03-11-search-context-filter-semantic-improvement.md
npm/: README.md  package.json  run.js
npm/ace-tool-rs/: README.md  package.json  run.js
scripts/: build-macOS-universal-binary.sh  check-version.sh  install.sh
src/: config.rs  http_logger.rs  lib.rs  main.rs  search_filter.rs
src/enhancer/: mod.rs  prompt_enhancer.rs  server.rs  templates.rs
src/index/: manager.rs  mod.rs
src/mcp/: mod.rs  server.rs  types.rs
src/service/: augment.rs  claude.rs  codex.rs  common.rs  gemini.rs  mod.rs  openai.rs
src/strategy/: adaptive.rs  metrics.rs  mod.rs
src/tools/: enhance_prompt.rs  mod.rs  search_context.rs
src/utils/: mod.rs  path_normalizer.rs  project_detector.rs
tests/: config_test.rs  enhance_prompt_test.rs  enhancer_server_test.rs  http_logger_test.rs  index_test.rs  mcp_server_test.rs  mcp_test.rs  path_normalizer_test.rs  prompt_enhancer_test.rs  templates_test.rs  third_party_api_test.rs  tools_test.rs  utils_test.rs
